--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Ebisu",
   "version": "1.0.0",
   "main": "md2code.js",
-  "repository": "git@github.com:fasiha/ebisu.git",
+  "repository": "https://github.com/fasiha/ebisu",
   "author": "Ahmed Fasih <wuzzyview@gmail.com>",
   "license": "Unlicense",
   "scripts": {
     "build": "node md2code.js",
-    "test": "yarn build && python -m \"nose\" -v"
+    "test": "yarn build && python3 -m \"nose\" -v"
   },
   "dependencies": {
     "lodash": "^4.17.4"
