--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Unlicense",
   "scripts": {
     "build": "node md2code.js",
-    "html": "cmark-gfm README.md | sed 's/\\\\&amp;/\\&/g' | yarn run mjpage | tail -n+2 > index.html",
+    "html": "cp header.html index.html && cmark-gfm README.md | sed 's/\\\\&amp;/\\&/g' >> index.html && node_modules/.bin/mjpage < index.html > tmp && mv tmp index.html",
     "test": "yarn build && python3 -m \"nose\" -v"
   },
   "dependencies": {},
