--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "node md2code.js",
     "html": "cp header.html index.html && cmark-gfm README.md | sed 's/\\\\&amp;/\\&/g' >> index.html && node_modules/.bin/mjpage < index.html > tmp && mv tmp index.html",
-    "test": "yarn build && python3 -m \"nose\" -v"
+    "test": "yarn build && python3 -m \"nose\" -v",
+    "pypi": "python setup.py sdist bdist_wheel && python3 setup.py sdist bdist_wheel && twine upload dist/* --skip-existing"
   },
   "dependencies": {},
   "devDependencies": {
