--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "doc": "pydoc-markdown ebisu.ebisu  > doc/doc.md",
     "build": "node md2code.js",
-    "html": "cp header.html index.html && pandoc --no-highlight -t html5 -f markdown_github-hard_line_breaks+yaml_metadata_block+markdown_in_html_blocks+auto_identifiers README.md | sed 's/\\\\&amp;/\\&/g' >> index.html && node_modules/.bin/mjpage < index.html | grep -v HLJS_CLIENTSIDE > tmp && mv tmp index.html",
+    "html": "cp header.html index.html && pandoc --no-highlight -t html5 -f markdown_github-hard_line_breaks+yaml_metadata_block+markdown_in_html_blocks+auto_identifiers README.md | sed 's/\\\\&amp;/\\&/g' >> index.html && npx mjpage < index.html > tmp && mv tmp index.html",
     "test": "yarn build && python3 -m \"nose\" -v",
     "pypi": "python setup.py sdist bdist_wheel && python3 setup.py sdist bdist_wheel && twine upload dist/* --skip-existing"
   },
